# flash-attention

./: .gitignore
hopper/: CMakeLists.txt  benchmark_attn.py  benchmark_flash_attention_fp8.py  benchmark_mla_decode_fp8.py  check_diff.py  check_diff_fp8.py  check_mla_cache.py  check_mla_diff_fp8.py  check_tensor.cpp  epilogue_fwd_sm90_tma.hpp  flash.h  flash_api.cpp  flash_attn_interface.py  flash_fwd_hdim512_e4m3_sm90.cu  flash_fwd_hdim576_e4m3_sm90.cu  flash_fwd_kernel.h  flash_fwd_launch_template.h  kernel_traits.h  main.cpp  mainloop_fwd_sm90_tma_gmma_ws.hpp  run.sh  seq_len.h  setup.py  static_switch.h  test_flash_attn.py  utils.h
